# sdl-cmake

./: CMakeLists.txt  README.md  main.cpp  main.h
